# jinjafx_server

./: CHANGELOG.md  README.md  jfx_p669j4ck9.yml  jfx_zDDJxAM5.yml  jinjafx_extension.py  jinjafx_server.py  lambda_function.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  pypi-release.yml
contrib/: Dockerfile  bootstrap.scss  change_bs_btn_color.py  update_cdnjs_links.py  update_versioned_links.py
docker/: Dockerfile  Dockerfile.HAProxy  Dockerfile.HAProxy-QUIC  Dockerfile.SCRATCH  README.md  haproxy.cfg  jinjafx-run.sh  jinjafx.container
extensions/: jinjafx_extension.py
jinjafx_server/: __init__.py  __main__.py  jinjafx_server.py  pandoc
jinjafx_server/www/: dt.html  index.html  jinjafx.css  jinjafx_dt.css  jinjafx_dt.js  jinjafx_logs.js  jinjafx_m.css  jinjafx_m.js  logs.html  output.html
kubernetes/: Dockerfile  Dockerfile.Alpine  Dockerfile.alpine  README.md  kubernetes.yml
lambda_function/: JinjaFx-Lambda-Role.json  Makefile  README.md  lambda_function.py
pandoc/: reference.docx
podman/: Dockerfile  README.md  jinjafx.container
www/: dt.html  index.html  jinjafx.css  jinjafx_dt.js  jinjafx_logs.css  jinjafx_logs.js  jinjafx_m.css  jinjafx_m.js  jinjafx_o.css  jinjafx_o.js  logs.css  logs.html  logs.js  obsolete.html  output.html
